--- a/templates/quiz/quiz_result.html
+++ b/templates/quiz/quiz_result.html
@@ -6,7 +6,7 @@
 
 <div class="flex justify-center"> 
 
-  <div class="w-[400px] mt-6">
+  <div class="w-full md:w-[400px] mt-6 p-2">
 
     <h1 class="text-2xl text-center font-bold mb-4">Quiz Result</h1>
     <p class="text-lg">You scored: <span class="font-semibold">{{ score }}</span></p>
