--- a/templates/quiz/quiz_take.html
+++ b/templates/quiz/quiz_take.html
@@ -9,11 +9,11 @@
 <div class="flex justify-center">
 
   <div class="w-[800px] relative" >
-    <div class="fixed top-12 right-6 border border-red-500 shadow-lg p-1 rounded-sm flex items-baseline justify-end items-center space-x-1 mt-6">
-      <span id="timer" class="text-lg font-bold text-red-600">
+    <div class="fixed top-12 right-8 md:right-1/4  border border-blue-600 shadow-lg p-1 rounded-sm flex items-baseline justify-end items-center mt-6">
+      <span id="timer" class="text-lg font-bold text-blue-600">
         {{ quiz.time }}
       </span>
-      <span class="text-sm font-semibold">dtk</span>
+      <span class="text-sm text-blue-600 font-semibold ml-[2px]">s</span>
      
     
     </div>
