--- a/templates/book/page.html
+++ b/templates/book/page.html
@@ -20,6 +20,7 @@
         
        
         <h1 class="text-center text-xl font-semibold mb-8"> {{ book.title }}</h1>
+        <div class="text-lg font-semibold text-blue-600 mb-6"><a href="{% url 'all_page' book.id %}">Semua Halaman</a></div>
         <h1 class="text-xl font-semibold mb-2">Daftar Isi</h1>
         <div class="border border-2 p-4 border-blue-400 bg-amber-50 mb-8">
             
