--- a/templates/home.html
+++ b/templates/home.html
@@ -19,6 +19,9 @@
       <a  href="{% url "sains_list" %}" >
         <div class="border border-blue-600 text-sm font-semibold px-2 py-2 rounded-sm text-blue-600 hover:bg-blue-600 hover:text-white w-full text-center mb-3">Sains</div>
       </a>
+      <a  href="{% url "posts" %}" >
+        <div class="border border-blue-600 text-sm font-semibold px-2 py-2 rounded-sm text-blue-600 hover:bg-blue-600 hover:text-white w-full text-center mb-3">Blog</div>
+      </a>
      
       
 
