--- a/templates/quiz/quiz_list.html
+++ b/templates/quiz/quiz_list.html
@@ -6,12 +6,13 @@
 
 <div class="flex justify-center mt-8">
 
-  <div class="w-[400px]">
-
+  <div class="w-full md:w-[400px] p-2">
     {% for quiz in quizzes %}
-    <div class="mb-8">
-      <a class="border border-blue-600 text-sm font-semibold px-2 py-1 rounded-sm text-blue-600 hover:bg-blue-600 hover:text-white" href="{% url 'quiz_detail' quiz.pk %}" >{{ quiz.name }} - {{ quiz.topic }}</a>
-    </div>
+
+    <a  href="{% url 'quiz_detail' quiz.pk %}" >
+      <div class="border border-blue-600 text-sm font-semibold px-2 py-2 rounded-sm text-blue-600 hover:bg-blue-600 hover:text-white w-full text-center mb-3">{{ quiz.name }} - {{ quiz.topic }}</div>
+    </a>
+
     {% endfor %}
 
 
