--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="flex md:justify-center w-full mt-12">
-    <div class=" w-full md:w-[400px]">
+    <div class=" w-full md:w-[400px] p-2">
         <form method="POST" class="border rounded shadow-lg px-4 py-2">
             {% csrf_token %}
 
