--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,17 @@
   <link rel="stylesheet" href="{% static 'style.css' %}">
   <script src="//unpkg.com/alpinejs" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style type="text/tailwindcss">
+    @layer base {
+      ol {
+        @apply list-decimal pl-5;
+      }
+      ol > li {
+        @apply pl-2;
+      }
+    }
+  </style>
+
   <title>
     {% block title %}
     Sinau App
