--- a/templates/sains/take.html
+++ b/templates/sains/take.html
@@ -3,12 +3,16 @@
 
 <div class="flex justify-center">
 
-  <div class="w-full md:w-[800px] p-2" >
-    <div class=" mb-4 flex justify-end items-center space-x-1 mt-6">
-      <span class="text-lg font-semibold">Time Remaining: </span>
-      <span id="timer" class="text-lg font-bold text-red-600">{{ tes.time }}</span> <span class="text-sm font-semibold">secs</span>
+  <div class="w-full md:w-[800px] p-2 relative" >
+    <div class="fixed top-12 right-8 md:right-1/4  border border-red-600 shadow-lg p-1 rounded-sm flex items-baseline justify-end items-center mt-6">
+      <span id="timer-sains" class="text-lg font-bold text-red-600">
+        {{ tes.time }}
+      </span>
+      <span class="text-sm text-red-600 font-semibold ml-[2px]">s</span>
+     
     
     </div>
+    
 
     <form id="tes-form" method="POST" action="{% url 'sains_submit' tes.pk %}">
       {% csrf_token %}
@@ -44,14 +48,37 @@
 
 </div>
 
-
-<!-- JavaScript for Timer and Auto-Submit -->
 <script>
+  // Get the test time from the server (in seconds)
+  var timeRemaining = {{ tes.time }};
+  
+  // Update the countdown timer every second
+  var timerElement = document.getElementById('timer-sains');
+  var countdownInterval = setInterval(function() {
+    // Decrease the time remaining
+    timeRemaining--;
+
+    // Format the timer display to always show 3 digits
+    var formattedTime = String(timeRemaining).padStart(2, '0');
+
+    // Update the timer display
+    timerElement.textContent = formattedTime;
+
+    // If time runs out, submit the form automatically
+    if (timeRemaining <= 0) {
+      clearInterval(countdownInterval); // Stop the timer
+      document.getElementById('tes-form').submit(); // Auto-submit the form
+    }
+  }, 1000); // 1000 milliseconds = 1 second
+</script>
+
+
+{% comment %} <script>
   // Get the tes time from the server (in seconds)
   var timeRemaining = {{ tes.time }};
   
   // Update the countdown timer every second
-  var timerElement = document.getElementById('timer');
+  var timerElement = document.getElementById('timer-sains');
   var countdownInterval = setInterval(function() {
     // Decrease the time remaining
     timeRemaining--;
@@ -65,5 +92,5 @@
       document.getElementById('tes-form').submit(); // Auto-submit the form
     }
   }, 1000); // 1000 milliseconds = 1 second
-</script>
+</script> {% endcomment %}
 {% endblock %}
