--- a/templates/sains/sains_result.html
+++ b/templates/sains/sains_result.html
@@ -28,7 +28,7 @@
     {% endfor %}
     </div>
 
-    <div class="flex flex-col text-center">
+    <div class="flex flex-col text-center mb-8">
       <a href="{% url 'sains_take' tes.id %}" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded-sm hover:bg-blue-600">Mulai game lagi</a>
       <a href="{% url 'scores_sains'  %}" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded-sm hover:bg-blue-600">All Scores</a>
 
