--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -34,6 +34,22 @@
             {% endif %}">
             Pertanyaan
             </a>
+            <a href="{% url 'sains_list' %}" 
+            class="{% if request.path == '/sains/' %}text-blue-500 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium {%else%}text-gray-800 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium 
+            {% endif %}">
+            Sains
+            </a>
+            <a href="{% url 'quiz_list' %}" 
+            class="{% if request.path == '/quiz/' %}text-blue-500 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium {%else%}text-gray-800 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium 
+            {% endif %}">
+            Quiz
+            </a>
+            <a href="{% url 'posts' %}" 
+            class="{% if request.path == '/posts/' %}text-blue-500 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium {%else%}text-gray-800 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium 
+            {% endif %}">
+            Blog
+            </a>
+
 
            
 
@@ -80,18 +96,21 @@
     <div x-show="open" class="md:hidden">
       <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 text-gray-500">
         {% if user.is_authenticated %} 
-        <a href="{% url "home" %}" class="block hover:bg-blue-200 px-3 py-2 rounded-md text-base font-medium ">Home</a>
+        <a href="{% url "home" %}" class="block hover:bg-blue-200 px-3 py-2 rounded-md text-slate-900 font-medium ">Home</a>
+        <a href="{% url "quiz_list" %}" class="block hover:bg-blue-200 px-3 py-2 rounded-md text-slate-900 font-medium ">Quiz</a>
+        <a href="{% url "sains_list" %}" class="block hover:bg-blue-200 px-3 py-2 rounded-md text-slate-900 font-medium ">Sains</a>
+        <a href="{% url "posts" %}" class="block hover:bg-blue-200 px-3 py-2 rounded-md text-slate-900 font-medium ">Blog</a>
 
         {% if request.user.is_authenticated and request.user.is_superuser %}      
-        <a href="/admin" class="block  hover:bg-blue-200 px-3 py-2 rounded-md text-base font-medium ">Admin</a>
+        <a href="/admin" class="block  hover:bg-blue-200 px-3 py-2 rounded-md text-slate-900 font-medium ">Admin</a>
 
         {% endif %}
 
-        <a href="{% url "scores" %}" class="block hover:bg-blue-200 px-3 py-2 rounded-md text-base font-medium ">Scores</a>
-        <a href="{% url "logout" %}" class="block hover:bg-blue-200 px-3 py-2 rounded-md text-base font-medium ">Logout</a>
+        <a href="{% url "scores" %}" class="block hover:bg-blue-200 px-3 py-2 rounded-md text-slate-900 font-medium ">Scores</a>
+        <a href="{% url "logout" %}" class="block hover:bg-blue-200 px-3 py-2 rounded-md text-slate-900 font-medium ">Logout</a>
         
         {% else %}
-        <a href="{% url "login" %}" class="block  hover:bg-blue-200 px-3 py-2 rounded-md text-base font-medium ">Login</a>
+        <a href="{% url "login" %}" class="block  hover:bg-blue-200 px-3 py-2 rounded-md text-slate-900 font-medium ">Login</a>
         {% endif %}
     
       </div>
