--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
     <h1 data-content="SINAU APP">
       SINAU APP
     </h1>
-    <div class="author">
+    <div class="author z-50">
       <a href="{% url "posts" %}"><h2>Blog</h2></a>
       <a href="{% url "book_list" %}"><h2>Books</h2></a>
       <a href="{% url "quiz_list" %}"><h2>Quiz</h2></a>
