--- a/templates/tes/detail.html
+++ b/templates/tes/detail.html
@@ -17,7 +17,7 @@
 
     <div class="mt-4">
 
-      <a href="{% url 'sains_take' tes.pk %}" class="border border-blue-600 text-sm font-semibold px-2 py-1 rounded-sm text-blue-600 hover:bg-blue-600 hover:text-white">Start Tes</a>
+      <a href="{% url 'tes_take' tes.pk %}" class="border border-blue-600 text-sm font-semibold px-2 py-1 rounded-sm text-blue-600 hover:bg-blue-600 hover:text-white">Start Tes</a>
 
     </div>
 
