--- a/templates/tes/results.html
+++ b/templates/tes/results.html
@@ -10,7 +10,7 @@ scores
 
   <div class="w-full  md:w-[800px]">
       <div class="flex justify-end mb-5">
-          <a  href="{% url "sains_list" %}">
+          <a  href="{% url "tes_list" %}">
               <div
                   class="text-slate-600 text-center text-sm font-semibold py-2 md:py-1 px-2 border border-slate-500  rounded-sm  hover:bg-slate-800 hover:text-white">
 
