--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -34,11 +34,12 @@
             {% endif %}">
             Pertanyaan
             </a>
-            <a href="{% url 'sains_list' %}" 
-            class="{% if request.path == '/sains/' %}text-blue-500 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium {%else%}text-gray-800 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium 
+            <a href="{% url 'tes_list' %}" 
+            class="{% if request.path == '/tes/' %}text-blue-500 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium {%else%}text-gray-800 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium 
             {% endif %}">
-            Sains
+            Test
             </a>
+          
             <a href="{% url 'quiz_list' %}" 
             class="{% if request.path == '/quiz/' %}text-blue-500 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium {%else%}text-gray-800 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium 
             {% endif %}">
@@ -98,7 +99,7 @@
         {% if user.is_authenticated %} 
         <a href="{% url "home" %}" class="block hover:bg-blue-200 px-3 py-2 rounded-md text-slate-900 font-medium ">Home</a>
         <a href="{% url "quiz_list" %}" class="block hover:bg-blue-200 px-3 py-2 rounded-md text-slate-900 font-medium ">Quiz</a>
-        <a href="{% url "sains_list" %}" class="block hover:bg-blue-200 px-3 py-2 rounded-md text-slate-900 font-medium ">Sains</a>
+        
         <a href="{% url "posts" %}" class="block hover:bg-blue-200 px-3 py-2 rounded-md text-slate-900 font-medium ">Blog</a>
 
         {% if request.user.is_authenticated and request.user.is_superuser %}      
