--- a/templates/tes/tes_result.html
+++ b/templates/tes/tes_result.html
@@ -29,8 +29,8 @@
     </div>
 
     <div class="flex flex-col text-center mb-8">
-      <a href="{% url 'sains_take' tes.id %}" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded-sm hover:bg-blue-600">Mulai game lagi</a>
-      <a href="{% url 'scores_sains'  %}" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded-sm hover:bg-blue-600">All Scores</a>
+      <a href="{% url 'tes_take' tes.id %}" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded-sm hover:bg-blue-600">Mulai game lagi</a>
+      <a href="{% url 'scores_tes'  %}" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded-sm hover:bg-blue-600">All Scores</a>
 
     </div>
 
