--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,7 +6,7 @@
         <!-- Left side: Logo, Home, About -->
         <div class="flex items-center">
        
-            <img src="{% static "pohadi-black.png" %}" class="w-24" alt="">
+            <img src="{% static "sinau2.png" %}" class="w-32" alt="">
   
           <div class="hidden md:flex md:items-center md:ml-6">
             {% if user.is_authenticated %} 
