--- a/templates/scores.html
+++ b/templates/scores.html
@@ -17,8 +17,8 @@
       <a  href="{% url "scores_quiz" %}" >
         <div class="border border-blue-600 text-sm font-semibold px-2 py-2 rounded-sm text-blue-600 hover:bg-blue-600 hover:text-white w-full text-center mb-3">Scores Quiz</div>
       </a>
-      <a  href="{% url "scores_sains" %}" >
-        <div class="border border-blue-600 text-sm font-semibold px-2 py-2 rounded-sm text-blue-600 hover:bg-blue-600 hover:text-white w-full text-center mb-3">Scores Sains</div>
+      <a  href="{% url "scores_tes" %}" >
+        <div class="border border-blue-600 text-sm font-semibold px-2 py-2 rounded-sm text-blue-600 hover:bg-blue-600 hover:text-white w-full text-center mb-3">Scores Tes</div>
       </a>
      
      
