--- a/templates/tes/results.html
+++ b/templates/tes/results.html
@@ -14,7 +14,7 @@ scores
               <div
                   class="text-slate-600 text-center text-sm font-semibold py-2 md:py-1 px-2 border border-slate-500  rounded-sm  hover:bg-slate-800 hover:text-white">
 
-                  Sains
+                  Tes
               </div>
           </a>
       </div>
