--- a/templates/home.html
+++ b/templates/home.html
@@ -1,41 +1,40 @@
-{% extends "layout_3d.html" %}
-{% load static %}
+{% extends "base.html" %}
+
 
 {% block title %}
 {{ block.super }} - home
 {% endblock title %}
 
 {% block content %}
-<div class="banner">
-  <div class="slider" style="--quantity: 10">
-    
-    <div class="item" style="--position: 1"><img src="{% static "images/boruto1.jpg" %}" alt=""></div>
-    <div class="item" style="--position: 2"><img src="{% static "images/boruto2.jpg" %}" alt=""></div>
-    <div class="item" style="--position: 3"><img src="{% static "images/picachu.jpg" %}" alt=""></div>
-    <div class="item" style="--position: 4"><img src="{% static "images/boruto4.jpg" %}" alt=""></div>
-    <div class="item" style="--position: 5"><img src="{% static "images/boruto5.jpg" %}" alt=""></div>
-    <div class="item" style="--position: 6"><img src="{% static "images/boruto6.jpg" %}" alt=""></div>
-    <div class="item" style="--position: 7"><img src="{% static "images/conan1.jpg" %}" alt=""></div>
-    <div class="item" style="--position: 8"><img src="{% static "images/conan2.jpg" %}" alt=""></div>
-    <div class="item" style="--position: 9"><img src="{% static "images/conan3.jpg" %}" alt=""></div>
-    <div class="item" style="--position: 10"><img src="{% static "images/conan4.jpg" %}" alt=""></div>
-  </div>
-  <div class="content">
-    <h1 data-content="SINAU APP">
-      SINAU APP
-    </h1>
-    <div class="author z-50">
-      <a href="{% url "posts" %}" ><h2>Blog</h2></a>
-      <a href="{% url "book_list" %}"><h2>Books</h2></a>
-      <a href="{% url "quiz_list" %}"><h2>Quiz</h2></a>
+
+<div class="flex justify-center mt-8">
+
+  <div class="w-full p-2 md:w-[400px]">
+
    
-    
-    
-      
-    </div>
-    <div class="model"></div>
+
+    <a  href="{% url "posts" %}" >
+      <div class="border border-blue-600 text-sm font-semibold px-2 py-2 rounded-sm text-blue-600 hover:bg-blue-600 hover:text-white w-full text-center mb-3">Blog</div>
+    </a>
+    <a  href="{% url "book_list" %}" >
+      <div class="border border-blue-600 text-sm font-semibold px-2 py-2 rounded-sm text-blue-600 hover:bg-blue-600 hover:text-white w-full text-center mb-3">Books</div>
+    </a>
+    <a  href="{% url "quiz_list" %}" >
+      <div class="border border-blue-600 text-sm font-semibold px-2 py-2 rounded-sm text-blue-600 hover:bg-blue-600 hover:text-white w-full text-center mb-3">Quiz</div>
+    </a>
+    <a  href="{% url "tes_list" %}" >
+      <div class="border border-blue-600 text-sm font-semibold px-2 py-2 rounded-sm text-blue-600 hover:bg-blue-600 hover:text-white w-full text-center mb-3">Tes</div>
+    </a>
+
+
+   
+
+
+
   </div>
+  
+  
+
 </div>
 
-
-{% endblock content %}
+{% endblock %}
